EM-6511 delete pact test